# api/openapi.json
@@ -15,7 +15,7 @@
     "version": "0.1.0"
   },
   "paths": {
-    "/v1/auth/login": {
+    "/api/v1/auth/login": {
       "post": {
         "tags": [
           "auth",
@@ -66,7 +66,7 @@
         }
       }
     },
-    "/v1/auth/logout": {
+    "/api/v1/auth/logout": {
       "post": {
         "tags": [
           "auth",
@@ -100,7 +100,7 @@
         }
       }
     },
-    "/v1/auth/me": {
+    "/api/v1/auth/me": {
       "get": {
         "tags": [
           "auth"
@@ -140,7 +140,7 @@
         }
       }
     },
-    "/v1/hosts": {
+    "/api/v1/hosts": {
       "get": {
         "tags": [
           "hosts"
@@ -180,7 +180,7 @@
         }
       }
     },
-    "/v1/hosts/{id}": {
+    "/api/v1/hosts/{id}": {
       "get": {
         "tags": [
           "hosts"
@@ -234,6 +234,32 @@
   },
   "components": {
     "schemas": {
+      "ApiErrorResponse": {
+        "type": "object",
+        "description": "An error response for an API endpoint. This is used to return errors to the\nclient in a consistent format.",
+        "required": [
+          "message"
+        ],
+        "properties": {
+          "code": {
+            "type": [
+              "string",
+              "null"
+            ],
+            "description": "An optional error code that can be used to identify the type of error\nthat occurred."
+          },
+          "details": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "message": {
+            "type": "string",
+            "description": "A human-readable message describing the error that occurred."
+          }
+        }
+      },
       "AuthLoginParams": {
         "type": "object",
         "required": [
